# user-service/swagger/v1/swagger.yaml
@@ -358,12 +358,14 @@ paths:
               properties:
                 recipient:
                   type: integer
-                start_timestamp:
-                  type: integer
-                  description: UNIX EPOCH date time
-                end_timestamp:
-                  type: integer
-                  description: UNIX EPOCH date time
+                event_date:
+                  type: string
+                start_time:
+                  type: string
+                  description: 24 h time. Ex 16:35 to represent 4:35pm
+                end_time:
+                  type: string
+                  description: 24 h time. Ex 16:35 to represent 4:35pm
                 kind:
                   type: string
                 recipient_rsvp:
@@ -420,12 +422,14 @@ paths:
             schema:
               type: object
               properties:
-                start_timestamp:
-                  type: integer
-                  description: UNIX EPOCH date time
-                end_timestamp:
-                  type: integer
-                  description: UNIX EPOCH date time
+                event_date:
+                  type: string
+                start_time:
+                  type: string
+                  description: 24 h time. Ex 16:35 to represent 4:35pm
+                end_time:
+                  type: string
+                  description: 24 h time. Ex 16:35 to represent 4:35pm
                 kind:
                   type: string
                 recipient_rsvp:
